--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	</head>
 	<style>
 	    body {
- background-image: url("waves.png");
+ background-image: url("https://codehs.com/uploads/d64ef4ac665f739e5f3507730f033483");
  .info {
   color: white;
 }
