--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
 		<title>Killer whales</title>
 	</head>
 	<style>
-	    body {
- background-image: url("https://codehs.com/uploads/d64ef4ac665f739e5f3507730f033483");
- .info {
-  color: white;
-}
-.header {
-  color: red;
-}
-
+	body {
+		background-image: url("https://codehs.com/uploads/d64ef4ac665f739e5f3507730f033483");
+		background-repeat:none;
+	.info {
+		color: white;
+	}
+	.header {
+		color: red;
+	}
+	
 	</style>
 <body> 
 	<h1 class="header" style="text-align: center;">Killer Whales in captivity</h1>
@@ -21,7 +22,7 @@
 	<h2 class="header" style="text-align: center;">Here are the reasons that they are not good in captivity:</h2>
 	<p class="info" style="text-align: center;">They are forced into groups of other familys, they only get along with their family so they would bully and pick on one killer whale causing aggresion torwards eachother. The Killer whales that are aggresive torwards eachother can bite causing killer whales to bleed and sometimes to get away from them they beach themselves on the pads they have or they hit themselves on the concrete walls. They cant hide from the sun causing them to be sunburnt all the time because their tanks dont go deep enough or have enough shade to hide from the sun when they are overheating. They are rewarded for doing tricks with dead frozen fish and when they arent doing the tricks right they aren't getting food so basically they have to work for their food. With them feeding the dead fish they wont learn how to hunt or anything meaning that they cant go back into the wild and a lot of these places say that they are going to release them back in the wild when in the wild they would most likely die of starvation. They are also exposed to loud sounds from above the water that they aren't used to in the wild. They get bored of doing this day by day week after week so they will just float around their tank bored.
 	</p>
-<img src="Orca.png" alt="Killer Whale">
+<img src="https://codehs.com/uploads/113d049e3e113901e3ef98c3c13d4b7c" alt="Killer Whale">
 
 </body>
 </html>
